[package]
name = "win-user-pref"
version = "0.1.0"
authors = ["Marc Guiselin <marc@guiselin.com>"]
license = "Unlicensed"
edition = "2018"
publish = false
repository = "https://github.com/MarcGuiselin/win-user-pref"
homepage = "https://github.com/MarcGuiselin/win-user-pref"
description = "Rust Library for Reading/Writing User Preferences on Windows"

[dependencies]
rust-crypto = "0.2.36"
widestring = "0.4.0"
base64 = "0.12.0"
winreg = "0.7.0"
winapi = { version = "0.3.8", features = [
    "winreg", "timezoneapi", "sddl", "errhandlingapi", "processthreadsapi", "securitybaseapi", "winbase"] }